Refactor supplier domain