@@ -2,8 +2,7 @@ package com.warehouse.supplier;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.doReturn;
 
 import java.util.Collections;
 import java.util.List;
@@ -16,29 +15,38 @@ import org.junit.jupiter.api.function.Executable;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import com.warehouse.supplier.infrastructure.adapter.secondary.exception.SupplierNotFoundException;
 import com.warehouse.supplier.domain.model.Supplier;
 import com.warehouse.supplier.domain.model.SupplierAddRequest;
 import com.warehouse.supplier.domain.model.SupplierAddResponse;
+import com.warehouse.supplier.domain.model.SupplierModelRequest;
 import com.warehouse.supplier.domain.port.primary.SupplyPortImpl;
+import com.warehouse.supplier.domain.port.secondary.SupplierRepository;
 import com.warehouse.supplier.domain.service.SupplierCodeGeneratorService;
+import com.warehouse.supplier.domain.service.SupplierCodeGeneratorServiceImpl;
 import com.warehouse.supplier.domain.service.SupplierService;
+import com.warehouse.supplier.domain.service.SupplierServiceImpl;
+import com.warehouse.supplier.infrastructure.adapter.secondary.exception.SupplierNotFoundException;
 
 @ExtendWith(MockitoExtension.class)
 public class SupplierPortImplTest {
 
+
     @Mock
-    private SupplierService service;
+    private SupplierRepository supplierRepository;
 
     private SupplyPortImpl supplyPort;
 
-
-    @Mock
-    private SupplierCodeGeneratorService generatorService;
+    private final String depotCode = "KT1";
+    private final String firstName = "Sebastian";
+    private final String lastName = "Soja";
+    private final String telephone = "123";
+    private final String supplierCode = "supplierCode";
 
 
     @BeforeEach
     void setup() {
+        final SupplierService service = new SupplierServiceImpl(supplierRepository);
+        final SupplierCodeGeneratorService generatorService = new SupplierCodeGeneratorServiceImpl();
         supplyPort = new SupplyPortImpl(service, generatorService);
     }
 
@@ -47,14 +55,62 @@ public class SupplierPortImplTest {
         // given
         final SupplierAddRequest request = buildSupplierAddRequest();
 
-        final Supplier supplier = createSupplier();
+        final Supplier supplier = new Supplier();
+        supplier.setFirstName("Sebastian");
+        supplier.setLastName("Soja");
+        supplier.setSupplierCode("code");
+        supplier.setTelephone("123");
+        supplier.setDepotCode("KT1");
 
-        when(generatorService.generate()).thenReturn("code");
-        when(service.createMultipleSuppliers(Collections.singletonList(supplier))).thenReturn(
-                Collections.singletonList(supplier));
+        final List<SupplierModelRequest> supplierModelRequests = Collections
+                .singletonList(SupplierModelRequest.builder()
+                        .depotCode(depotCode)
+                        .firstName(firstName)
+                        .lastName(lastName)
+                        .telephone(telephone)
+                        .build());
+
+        doReturn(supplierModelRequests)
+                .when(supplierRepository)
+                .createMultipleSuppliers(List.of(supplier));
         // when
 		final List<SupplierAddResponse> supplierAddResponseList = supplyPort
-				.createMultipleSuppliers(Stream.of(request).toList());
+				.createMultipleSuppliers(List.of(request));
+        // then
+        assertThat(supplierAddResponseList.get(0).getSupplier()).isNotNull();
+    }
+
+    @Test
+    void shouldCreateSuppliersWithGivenSupplierCode() {
+        // given
+        final SupplierAddRequest request = SupplierAddRequest.builder()
+                .depotCode(depotCode)
+                .firstName(firstName)
+                .lastName(lastName)
+                .telephone(telephone)
+                .supplierCode(supplierCode)
+                .build();
+
+        final Supplier supplier = new Supplier(
+                "supplierCode", "Sebastian", "Soja", "123", "KT1"
+        );
+
+		final List<SupplierModelRequest> supplierModelRequests = Collections
+				.singletonList(SupplierModelRequest.builder()
+                        .depotCode(depotCode)
+                        .supplierCode(supplierCode)
+						.firstName(firstName)
+                        .lastName(lastName)
+                        .telephone(telephone)
+                        .build());
+        
+        doReturn(supplierModelRequests)
+                .when(supplierRepository)
+                .createMultipleSuppliers(List.of(supplier));
+
+        // when
+        final List<SupplierAddResponse> supplierAddResponseList = supplyPort
+                .createMultipleSuppliers(Stream.of(request).toList());
         // then
         assertThat(supplierAddResponseList.get(0).getSupplier()).isNotNull();
     }
@@ -63,8 +119,6 @@ public class SupplierPortImplTest {
     void shouldFindAllSuppliers() {
         // given
         final Supplier supplier = createSupplier();
-        when(service.findAll()).thenReturn(
-                Collections.singletonList(supplier));
         // when
         final List<Supplier> suppliers = supplyPort.findAllSuppliers();
         // then
@@ -74,8 +128,6 @@ public class SupplierPortImplTest {
     @Test
     void shouldReturnEmptyList() {
         // given
-        when(service.findAll()).thenReturn(
-                Collections.emptyList());
         // when
         final List<Supplier> suppliers = supplyPort.findAllSuppliers();
         // then
@@ -86,7 +138,6 @@ public class SupplierPortImplTest {
     void shouldFindSupplierByCode() {
         // given
         final String code = "code";
-        when(service.findSupplierByCode(code)).thenReturn(createSupplier());
         // when
         final Supplier supplier = supplyPort.findSupplierByCode(code);
         // then
@@ -98,9 +149,7 @@ public class SupplierPortImplTest {
         // given
         final String code = "code";
         final SupplierNotFoundException exception = new SupplierNotFoundException("Supplier was not found");
-        doThrow(exception)
-                .when(service)
-                .findSupplierByCode(code);
+
         // when
         final Executable executable = () -> supplyPort.findSupplierByCode(code);
         // then
@@ -113,7 +162,6 @@ public class SupplierPortImplTest {
     void shouldFindManyBySupplierCode() {
         // given
         final String code = "code";
-        when(service.findSuppliersBySupplierCode(code)).thenReturn(List.of(createSupplier()));
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByCode(code);
         // then
@@ -124,7 +172,6 @@ public class SupplierPortImplTest {
     void shouldNotFindManyBySupplierCode() {
         // given
         final String code = "code";
-        when(service.findSuppliersBySupplierCode(code)).thenReturn(Collections.emptyList());
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByCode(code);
         // then
@@ -135,7 +182,6 @@ public class SupplierPortImplTest {
     void shouldFindManyByDepotCode() {
         // given
         final String code = "code";
-        when(service.findSuppliersByDepotCode(code)).thenReturn(List.of(createSupplier()));
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByDepotCode(code);
         // then
@@ -146,7 +192,6 @@ public class SupplierPortImplTest {
     void shouldNotFindManyByDepotCode() {
         // given
         final String code = "code";
-        when(service.findSuppliersByDepotCode(code)).thenReturn(Collections.emptyList());
         // when
         final List<Supplier> supplier = supplyPort.findSuppliersByDepotCode(code);
         // then
